--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     compile("net.sf.ehcache:ehcache")
     compile('org.springframework.boot:spring-boot-starter-data-redis')
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
+    compile ('org.springframework.boot:spring-boot-starter-log4j2')
+    compile ("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: 'org.springframework.boot:spring-boot-starter-logging'
+    }
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
