--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE')
-    compile('org.springframework.security:spring-security-jwt:1.1.0.RELEASE')
-    compile('io.jsonwebtoken:jjwt:0.9.0')
-    compile('com.auth0:java-jwt:3.5.0')
-    compile("net.sf.ehcache:ehcache")
-    compile('org.springframework.boot:spring-boot-starter-data-redis')
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE')
+    implementation('org.springframework.security:spring-security-jwt:1.1.0.RELEASE')
+    implementation('io.jsonwebtoken:jjwt:0.9.0')
+    implementation('com.auth0:java-jwt:3.5.0')
+    implementation("net.sf.ehcache:ehcache")
+    implementation('org.springframework.boot:spring-boot-starter-data-redis')
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
@@ -38,8 +38,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 }
 
 test {
